--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script src="/js/script.js" type="module"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>API Consumption</h1>
+    </header>
+    <main>
+      <div></div>
+    </main>
+  </body>
 </html>
