--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
       <h1>API Consumption</h1>
     </header>
     <main>
-      <div></div>
+      <form>
+        <input
+          type="text"
+          id="cityName"
+          placeholder="Enter a city name"
+        /><br />
+        <input
+          type="submit"
+          value="Get Weather Information"
+          id="weather-data"
+        />
+      </form>
+
+      <div id="display_data"></div>
+      <div id="display_datatwo"></div>
     </main>
   </body>
 </html>
