--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
           id="cityName"
           placeholder="Enter a city name"
         /><br />
-        <input
-          type="submit"
-          value="Get Weather Information"
-          id="weather-data"
-        />
+        <input type="submit" value="Get info" id="weather-data" />
       </form>
 
       <div id="display_data"></div>
