--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <input type="submit" value="Get info" id="weather-data" />
       </form>
 
-      <div id="display_data"></div>
-      <div id="display_datatwo"></div>
+      <div id="display_weather"></div>
+      <div id="display_ticket"></div>
     </main>
   </body>
 </html>
