--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
     </header>
     <main>
       <form>
-        <input
-          type="text"
-          id="cityName"
-          placeholder="Enter a city name"
-        /><br />
+        <p>Town</p>
+        <input type="text" id="cityName" placeholder="Enter a city name" />
         <input type="submit" value="Get info" id="weather-data" />
       </form>
 
