--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <input type="text" id="cityName" placeholder="Enter a city name" />
         <input type="submit" value="Get info" id="weather-data" />
       </form>
-
+      <h2 class="left">Weather</h2>
       <div id="display_weather"></div>
+      <h2 class="left">Events</h2>
       <div id="display_ticket"></div>
     </main>
   </body>
